chore:add transactions

--- a/.env
+++ b/.env
@@ -24,6 +24,10 @@ host=localhost
 rpcuser=leo
 rpcpassword=2585
 
+username=postgres,
+password=2585963741Leo!,
+database=postgres,
+
 minrelaytxfee=0.00000500
 mintxfee=0.00000500
 
